# CYBERDUDEBIVASH-SPECTER

./: LICENSE.txt  NOTICE.txt  README.md  pyproject.toml  requirements.txt  security.md  specter.py  specter_report.json
config/: specter.yaml
specter/: __main__.py  banner.py
specter/core/: asset_mapper.py  exposure_index.py  risk_scoring.py  scanner.py
specter/recon/: cert_transparency.py  dns.py  headers.py  whois.py
specter/reporting/: json_report.py
